# aihelper

./: .gitignore  DEPLOY.md  README.md  chatgpt.md  docker-compose.yml  index.html  package-lock.json  package.json  privacy.html  terms.html
desktop/: .env.production  README.md  package.json  vite.config.ts
desktop/src/: App.tsx  CompanionPanel.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs
desktop/src/services/: api.ts  settings.ts
desktop/src/utils/: labels.ts
docs/: index.html  privacy.html  support.html  terms.html
extension/: .env.production.example  manifest.json  package.json  popup.html  sidepanel.html  tsconfig.json  vite.config.ts  vite.content.config.ts
extension/src/: config.ts  vite-env.d.ts
extension/src/background/: service-worker.ts
extension/src/content/: adapters.ts  conversation.ts  index.ts  ui-root.ts
extension/src/popup/: main.tsx  popup.css
extension/src/services/: analytics.ts  api.ts
extension/src/sidepanel/: SidePanel.tsx  main.tsx  styles.css
extension/src/utils/: labels.ts
server/: .env.example  Dockerfile  config.py  deps.py  main.py  requirements.txt
server/database/: db.py
server/schemas/: analytics.py  requirement.py
server/scripts/: create_api_key.py
server/services/: ai_client.py  analytics.py  analyze.py  auth.py  complete.py  cost.py  labels.py
server/static/: privacy.html  stats.html  terms.html
